@@ -1,6 +1,7 @@
 dev:
   * remove python2 support, use previous version of rf if you need it
   * catch error from rfstats call in iter_event_data and issue a warning (see #7)
+  * also add event_id to stats object (will not be written to SAC and Q format, see #10)
   * fix bug in IterMultipleComponents (see #9)
 v0.7.0:
   * add official support for python 3.7 and 3.8
